Updated all changes from past month to non-database version

--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 		<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
-	<body>
+	<body class="big_top">
 		<header>
 				<div class = "container">
 					<nav class="navbar navbar-default navbar-fixed-top">
@@ -45,22 +45,22 @@
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1" target="_blank">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng" target="_blank">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/" target="_blank">
 		   							<span class="fa fa-instagram"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131" target="_blank">
 		  							<span class="fa fa-google"></span>
 		  						</a>
 		  					</li>
@@ -72,7 +72,7 @@
 				</div>
 		</header>
 		<h1 class="imp_text cent_text pg_head"><strong>About Us</strong></h1>
-		<h4 class="cent_text"> The Cheng Foundation is run by both <strong>Bryce</strong> and <strong>Darrell</strong> Cheng, the foundation presidents. Brief descriptions of each co-president are available below.</h4> 
+		<h4 class="cent_text"> The Cheng Foundation is run by both <strong>Bryce</strong> and <strong>Darrell</strong> Cheng, the Foundation presidents. Brief descriptions of each co-president are available below.</h4> 
 		<div class="panel panel-default col-lg-8 col-lg-offset-2">
 			<div class="panel-heading">
 		  		<h3 class = "panel-title cent_text">Bryce Cheng</h3>
@@ -83,10 +83,10 @@
 				<p>At an early age, Bryce Cheng was tasked with the heavy burden of upholding the prestigious
 				Cheng Dynasty's legacy. As the oldest of the "twin dragons," Bryce was tasked with "making the Cheng
 				Family great again" in the then foreign continent of North America. Alongside his younger brother,
-				Darrell, Bryce underwent integrated training at the University of Washington Academy for Young Scholars to
-				acquire the skills necessary to survive in the brutal and capitalist world of the United States.</p>
+				Darrell, Bryce underwent integral training at the University of Washington Academy for Young Scholars to
+				acquire the skills necessary to survive in the brutal capitalist world of the United States.</p>
 				<p class = "cent_text big_print"><strong>Rice to Greatness</strong></p> 
-				<p>After receiving a "miniscule" loan of 500-million dollars from their family fortune,
+				<p>After receiving a "small" loan of 500-million dollars from the Cheng family fortune,
 
 				Bryce established a strong foothold in the American economy by investing in construction through his
 
@@ -94,34 +94,29 @@
 
 				for construction and property development (twice running Donald Trump bankrupt). In addition, Bryce
 
-				was able to curb downsizing through a combination of lobbying and bribery of the U.S. government with his
-
-				now 50-billion dollar net worth.</p>
+				was able to curb downsizing through lobbying the U.S. government with his now 50-billion dollar net worth.</p>
 				<p class = "cent_text big_print"><strong>Enlightenment and Future Investment in Philanthropy</strong></p>
-				<p>After monopolizing the construction market
-
-				through his trademark aggressive negociating strategy, Bryce Cheng was now a leading figure in the
+				<p>After monopolizing the construction market through his trademark aggressive negotiating strategy, Bryce Cheng was now a leading figure in the
 
 				American business world earning himself a position at the top of the Fortune 500. However, Cheng was haunted by the
 
 				effects of his success in the construction market after witnessing the countless competitors that lay
 
-				bankrupt as a result of his rise. In order to cope with his burdensome guilt, Bryce Cheng, with the help of Darrel Cheng (now
-
-				CEO of Cheng Consolidated Entertainment Facilities), merged to found the Cheng Foundation.</p>
+				bankrupt as a result of his rise. In order to cope with his burdensome guilt, Bryce Cheng, with the help of Darrel Cheng 
+				(CEO of Cheng Consolidated Entertainment Facilities), merged to found the Cheng Foundation.</p>
 
 		  	</div>
 		</div>
-		<div class="panel panel-default col-lg-8 col-lg-offset-2"">
+		<div class="panel panel-default col-lg-8 col-lg-offset-2 med_pad_bot">
 		 	<div class="panel-heading">
 		    	<h3 class="panel-title cent_text">Darrell Cheng</h3>
 		 	</div>
 		 	<div class="panel-body">
 		    	<img class="img-responsive center-block" src = "images/Dar_Hori.jpg" alt="Darrell Cheng">
 		 		<p class = "cent_text big_print"><strong>Childhood</strong></p> 
-		  		<p>During his childhood, Darrell was constantly neglected by his parents due to being the younger
+		  		<p>During his childhood, Darrell Cheng was constantly neglected by his parents due to being the younger
 
-				child. This constant neglect during his development prompted Darrell to train intensively in order to one
+				child. This constant neglect during his childhood years prompted Darrell to train intensively in order to one
 
 				day surpass his brother, Bryce. As the other half of the "Twin Dragons," Darrell went to the University of
 
@@ -129,7 +124,7 @@
 				<p class = "cent_text big_print"><strong>Rice to Greatness</strong></p> 
 				<p>After graduating from the University of Washington Academy for Young Scholars, Cheng
 
-				established a strong foothold in the Entertainment business by constructing a slew of high-end night
+				established a strong foothold in the entertainment business by constructing a slew of high-end night
 
 				clubs in government-designated brownfields, lands previously considered "lost" due to excessive human
 
@@ -137,7 +132,7 @@
 
 				brownfields. In addition, Darrell was able to establish a monopoly in the entertainment business by
 
-				suing other companies on behalf of contamination of the environment. As a result, the company,
+				suing other companies on grounds of excessive contamination of the environment. As a result, the company,
 
 				"Cheng Consolidated Entertainment Facilities" was born.</p>
 				<p class = "cent_text big_print"><strong>Enlightenment and Future Investment in Philanthropy</strong></p>
@@ -147,16 +142,16 @@
 
 				Legacy, capsized during a storm. Cheng later spent five months on the distant island of Lien Choy. Not
 
-				much was known during his five month excursion, but Darrell proclaimed himself a changed man after
+				much is known about his five month excursion, but Darrell proclaimed himself a changed man after
 
-				he was rescued by Mongolian fisherman. In order to atone for his past actions as a playboy leach of the
+				he was rescued by Indonesian fisherman. In order to atone for his past actions as the playboy leach of the
 
-				Cheng Family, Darrell co-founded the Cheng foundation with his brother, Bryce.</p>
+				Cheng Family, Darrell co-founded the Cheng foundation with his older brother, Bryce.</p>
 		 	</div>
 		</div>
 		<footer class="footer">
 			<div class="container">
-				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="index.html"> ChengFoundation.us </a></h5>
 			</div> 
 		</footer>
 	</body>
