--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Cheng Foundation Official Website</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<meta name="google-site-verification" content="MHZuXCUmVLMbnEuXnE2MK9ElNqZ1QDSfzJ5HV-WBKn8"/>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 		<link href="styles/main.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -11,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 		<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
-	<body>
+	<body class="big_top">
 		<header>
 			<div class = "container">
 				<nav class="navbar navbar-default navbar-fixed-top">
@@ -45,22 +46,22 @@
 				      <!-- Right aligned links -->
 				      <ul class="nav navbar-nav navbar-right">
 				      	<li>
-				        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
+				        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1" target="_blank">
 	   							<span class="fa fa-facebook"></span>
 	  						</a>
 	  					</li>
 	  					<li>
-				        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
+				        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng" target="_blank">
 	   							<span class="fa fa-twitter"></span>
 	  						</a>
 	  					</li>
 	  					<li>
-				        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+				        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/" target="_blank">
 	   							<span class="fa fa-instagram"></span>
 	  						</a>
 	  					</li>
 	  					<li>
-				        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+				        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131" target="_blank">
 	  							<span class="fa fa-google"></span>
 	  						</a>
 	  					</li>
@@ -71,9 +72,6 @@
 				</nav>
 			</div>
 		</header>
-		<!-- <p>HELLO</p>
-		<p>HELLO</p> TEMP SOLUTION FOR THE HEADER PRBLM-->
-		<!-- More stuff after the nav bar -->  
 		<div id="theCarousel" class="carousel slide" data-ride="carousel">
 		  <!-- Define how many slides to put in the carousel, order list containing this, plus connects pack to carousel class-->
 		  <ol class="carousel-indicators">
@@ -84,31 +82,30 @@
 		  <!-- Define the text to place over the image, ordered list w/ captions + buttons-->
 			<div class="carousel-inner">
 			    <div class="item active">
-			    <!-- <img src="images/Cheng_Building.JPG" alt="Building"> -->
 				    <div class ="slide1">
+						<img class="slide_image" src="images/Island.jpg" alt="Island">
+						<div class="carousel-caption">
+							<p class="fine_print read_col">The Cheng Islandic Properties</p>
+							<p><a href="properties.html" class="btn btn-primary btn-sm">Learn more about our various properties</a></p>
+						</div>
+				  	</div>
+				</div>
+			  	<div class="item">
+				  	<div class="slide2">
 				    	<img class="slide_image" src="images/palm_island.jpg" alt="Building">
 				    	<div class="carousel-caption">
 				      		<p class="fine_print read_col">The Cheng Construction Fund</p>
 				      		<p><a href="aboutus.html" class="btn btn-primary btn-sm">Learn more about our vision</a></p>
 				    	</div>
-				  	</div>
-				</div>
-			  	<div class="item">
-				  	<div class="slide2">
-				  		<img class="slide_image" src="images/Cheng_Ski_Hori.PNG" alt="Dinner">
-				  		<div class="carousel-caption">
-				    		<p class="fine_print read_col">The Cheng Foundation Mountainous Development Program</p>
-				    		<p><a href="ourwork.html" class="btn btn-primary btn-sm">Learn more about our programs</a></p>
-				  		</div>
 			  		</div>
 				</div>
 				<div class="item">
 					<div class="slide3">
-						<img class="slide_image" src="images/Island.jpg" alt="Mountain">
-						<div class="carousel-caption">
-							<p class="fine_print read_col">The Cheng Islandic Properties</p>
-							<p><a href="properties.html" class="btn btn-primary btn-sm">Learn more about our various properties</a></p>
-						</div>
+				  		<img class="slide_image" src="images/Cheng_Ski_Hori.PNG" alt="Mountain">
+				  		<div class="carousel-caption">
+				    		<p class="fine_print read_col">The Cheng Foundation Mountainous Development Program</p>
+				    		<p><a href="ourwork.html" class="btn btn-primary btn-sm">Learn more about our programs</a></p>
+				  		</div>
 					</div>
 			</div>
 			  <!-- Set the actions to take when the arrows are clicked -->
@@ -123,7 +120,7 @@
 		<div class="container">
 			<div class="jumbotron gold_jumbotron">
 			 	<h1 class="imp_text pg_head">The Cheng Foundation</h1>
-			  	<p class="cent_text">The Cheng Foundation's lifelong mission is to use the Cheng family's resources 
+			  	<p class="cent_text">The Cheng Foundation's lifelong mission is to use the Cheng Family's resources 
 			  	to help support the less fortunate members of our local communities.
 			  	</p>
 			  	<div class = "cent_text">
@@ -134,7 +131,7 @@
 
 		<footer class="footer">
 			<div class="container">
-				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="index.html"> ChengFoundation.us </a></h5>
 			</div> 
 		</footer>
 	</body>
