--- a/ourwork.html
+++ b/ourwork.html
@@ -11,7 +11,7 @@
 			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
-	<body>
+	<body class="big_top">
 		<header>
 				<div class = "container">
 					<nav class="navbar navbar-default navbar-fixed-top">
@@ -45,22 +45,22 @@
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1" target="_blank">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng" target="_blank">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/" target="_blank">
 		   							<span class="fa fa-instagram"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131" target="_blank">
 		  							<span class="fa fa-google"></span>
 		  						</a>
 		  					</li>
@@ -72,21 +72,21 @@
 				</div>
 		</header>
 		<h1 class="imp_text cent_text pg_head"><strong>Our Work</strong></h1>
-		<h4 class="cent_text">Here's some in-depth information about our various projects here at the Cheng Foundation.</h4> 
+		<h4 class="cent_text">Here's some in-depth information about a few of our various projects here at the Cheng Foundation.</h4> 
 		<div class="container">
 			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The CII Project</h1>
-			  	<p>The CII (Cultural Immigration and Integration) Project is the newest Cheng Foundation venture, through which the foundation strives to encourage cultural awareness.</p>
+			  	<p>The CII (Cultural Immigration and Integration) Project is the newest Cheng Foundation venture, through which the organization strives to increase cultural awareness.</p>
 			  	<div class = "cent_text">
 			  		<p><a class="btn btn-primary btn-lg" href="https://kb.construction-institute.org/" role="button" target="_blank">Join the CII Project</a></p>
 			  	</div>
 			</div>
-		</div>
+		</div>	
 		<div class="container">
 			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The Shaw Trust</h1>
-			  	<p>The Shaw Trust is dedicated towards improving the lives of Carmel High School students. Currently, the  
-			  	Trust is focused on funding the development of helicophter pads on top of local high schools.</p>
+			  	<p>The Shaw Trust is dedicated towards improving the lives of students around the world. Currently, the  
+			  	Trust is focused on funding the development of helicopter pads on top of local high schools.</p>
 			  	<div class = "cent_text">
 			  		<p><a class="btn btn-primary btn-lg" href="https://www.shaw-trust.org.uk/" role="button" target = "_blank">Get involved with the Shaw Trust</a></p>
 			  	</div>
@@ -94,8 +94,17 @@
 		</div>
 		<div class="container">
 			<div class="jumbotron grey_jumbotron">
+			 	<h1 class="imp_text">The Chemboost Project</h1>
+			  	<p>A collaboration with Cheng Foundation member <strong>Allen Zhang</strong>, in order to run the non-profit organization, Chemboost.net. The organization strives to boost millions of students' chemistry elo across the globe.</p>
+			  	<div class = "cent_text">
+			  		<p><a class="btn btn-primary btn-lg" href="http://chemboost.net/" role="button" target = "_blank">Visit Chemboost.net</a></p>
+			  	</div>
+			</div>
+		</div>	
+		<div class="container">
+			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The Madduri Partnership</h1>
-			  	<p>A partnership with fellow billionaire Sathvik Madduri to find the rarest artificats in existence. The partnership is responsible for the discovery of the Rosetta Stone and a multitude of other ancient works.</p>
+			  	<p>A partnership with fellow billionaire <strong>Sathvik Madduri</strong> to find the rarest artificats in existence. The partnership is responsible for the discovery of the Rosetta Stone and a multitude of other ancient works.</p>
 			  	<div class = "cent_text">
 			  		<p><a class="btn btn-primary btn-lg" href="http://events.pennwell.com/dtech2017/public/SpeakerDetails.aspx?FromPage=Speakers.aspx&ContactID=73566" role="button" target="_blank">Learn more about the partnership</a></p>
 			  	</div>
@@ -104,7 +113,7 @@
 		<div class="container">
 			<div class="jumbotron grey_jumbotron">
 			 	<h1 class="imp_text">The Cheng Grant Organization</h1>
-			  	<p>An organization providing financial grants to low-income students (annual incomes less than  $100 million) in our local communities </p>
+			  	<p>An organization providing financial grants to low-income students (annual incomes less than  $100 million) in our communities. Applications are reviewed by the Cheng Grant Committee and are very competitive.</p>
 			  	<div class = "cent_text">
 			  		<p><a class="btn btn-primary btn-lg" href="donations.html" role="button">Apply for a Cheng Grant</a></p>
 			  	</div>
@@ -112,11 +121,9 @@
 		</div>
 		<footer class="footer">
 			<div class="container">
-				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="index.html"> ChengFoundation.us </a></h5>
 			</div> 
 		</footer>
-
-		<!--Other jumbotron for projects, Communist Fund, Madduri Partnership, Shaw Trust -->
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
