--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,7 @@
 			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
-	<body>
+	<body class="big_top">
 		<header>
 				<div class = "container">
 					<nav class="navbar navbar-default navbar-fixed-top">
@@ -45,22 +45,22 @@
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1" target="_blank">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng" target="_blank">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/" target="_blank">
 		   							<span class="fa fa-instagram"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131" target="_blank">
 		  							<span class="fa fa-google"></span>
 		  						</a>
 		  					</li>
@@ -73,41 +73,30 @@
 		</header>
 		<h1 class="imp_text cent_text pg_head"><strong>Testimonials</strong></h1>
 		<h4 class="cent_text">Here are some anonymous scrambled responses from a few of our satisfied clients.</h4>
-		<!-- <div class="test_holder"> -->
+		<h4 class="cent_text">(Click on the arrows to view / collapse responses)</h4>		
 			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
 				<div class="panel-heading close_barry">
 					<h3 class="panel-title cent_text">Warry Bei <span class="pull-right glyphicon glyphicon-menu-down"></span> </h3> 
-					
-
 				</div>
-				<div class="panel-body close_barry_this">
+				<div class="panel-body close_barry_this collapse">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Barry.JPG alt="Barry"> -->
-					<p class="imp_text big_print ">"The Cheng Grant Organization was responsible for changing my life through allowing me to leave my home and form my own crippling impoverished community."</p>
+					<p class="imp_text big_print ">"The Cheng Grant Organization was responsible for permanently destroying my motivation to help people and I live in a cardboard shack."</p>
 				</div>
 			</div>
 			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
 				<div class="panel-heading close_kevin">
 					<h3 class="panel-title cent_text">Cevin Khen <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body close_kevin_this">
+				<div class="panel-body close_kevin_this collapse">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Kevin_Hori.JPG alt="Kevin"> -->
-					<p class="imp_text big_print ">"The Cheng Foundation ruined my life. Because of the Cheng Food Aid Program, I now live in a cardboard box shack."</p>
+					<p class="imp_text big_print ">"The Cheng Foundation ruined my life. Because of the Cheng Food Aid Program, I now live in a cardboard shack."</p>
 				</div>
-			</div>
-			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
-				<div class="panel-heading close_allen">
-					<h3 class="panel-title cent_text">Zllen Aheng <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
-				</div>
-				<div class="panel-body close_allen_this">
-					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
-					<p class="imp_text big_print">"The Cheng Foundation demoted me back into Bone Pit through their grant program."</p>
-				</div>
-			</div>			
+			</div>		
 			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
 				<div class="panel-heading close_daniel">
 					<h3 class="panel-title cent_text">Laniel Dee <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body close_daniel_this">
+				<div class="panel-body close_daniel_this collapse">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
 					<p class="imp_text big_print">"Mem."</p>
 				</div>
@@ -116,33 +105,44 @@
 				<div class="panel-heading close_julien">
 					<h3 class="panel-title cent_text">Zulien Jhu <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body close_julien_this">
+				<div class="panel-body close_julien_this collapse">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
 					<p class="imp_text big_print">"Are we still friends?"</p>
 				</div>
 			</div>
 			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
 				<div class="panel-heading close_satvik">
-					<h3 class="panel-title cent_text">Matvik Sadduri <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
+					<h3 class="panel-title cent_text">Mathvik Sadduri <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body close_satvik_this">
+				<div class="panel-body close_satvik_this collapse">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
-					<p class="imp_text big_print">"The Cheng Foundation scammed me out of my entire fortune when I partnered with them. I now live in a cardboard box shack."</p>
+					<p class="imp_text big_print">"The Cheng Foundation scammed me out of my entire fortune of billions when I partnered with them. I now live in a cardboard shack."</p>
 				</div>
 			</div>
+			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
+				<div class="panel-heading close_allen">
+					<h3 class="panel-title cent_text">Zllen Aheng <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
+				</div>
+				<div class="panel-body close_allen_this collapse">
+					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
+					<p class="imp_text big_print">"The Cheng Foundation demoted me back into Bone Pit through their grant program. Because of this, my parents disowned me and I now live in a cardboard shack."</p>
+				</div>
+			</div>	
 			<div class="panel panel-default col-lg-6 col-lg-offset-3 med_pad_bot">
 				<div class="panel-heading close_jason">
 					<h3 class="panel-title cent_text">Sason Jhaw <span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 				</div>
-				<div class="panel-body close_jason_this">
+				<div class="panel-body close_jason_this collapse">
 					<!-- <img class="testimonial_img img-responsive center-block" src=images/Zheng_Vert2.JPG alt="Allen"> -->
-					<p class="imp_text big_print">"INSTAGRAM POST CAPTION HERE"</p>
+					<p class="imp_text big_print">"I am sorry for only having silver-flaked caviar today instead of your usual gold-flaked recipe. I beg you to be lenient in the punishment that I am about to receive and not imprision me in my cardboard shack."</p>
 				</div>
 			</div>
-		<!-- </div> -->
+		<div class="bot_box med_pad_bot pad_top">
+			<p>&nbsp &nbsp &nbsp &nbsp &nbsp </p>
+		</div>
 		<footer class="footer">
 			<div class="container">
-				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="index.html"> ChengFoundation.us </a></h5>
 			</div> 
 		</footer>
 	</body>
@@ -150,15 +150,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script>
 	$(document).ready(function(){
-		function close_everything_init(){
-			$(".close_barry_this").fadeToggle(0); 
-			$(".close_kevin_this").fadeToggle(0); 			
-			$(".close_allen_this").fadeToggle(0);
-			$(".close_daniel_this").fadeToggle(0);
-			$(".close_julien_this").fadeToggle(0); 
-			$(".close_satvik_this").fadeToggle(0); 
-			$(".close_jason_this").fadeToggle(0);   
-		}
 		function change_barry_credits(){
 			$(".close_barry_this").fadeToggle(200); 
 		}
@@ -180,7 +171,7 @@
 		function change_jason_credits(){
 			$(".close_jason_this").fadeToggle(200); 
 		}
-		close_everything_init() 
+		
 		$('.close_barry').on("click",change_barry_credits)
 		$('.close_kevin').on("click",change_kevin_credits)
 		$('.close_allen').on("click",change_allen_credits)
