--- a/accepteddonations.html
+++ b/accepteddonations.html
@@ -11,7 +11,7 @@
 			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
-	<body>
+	<body class="small_top">
 		<header>
 				<div class = "container">
 					<nav class="navbar navbar-default navbar-fixed-top">
@@ -45,22 +45,22 @@
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1" target="_blank">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng" target="_blank">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/" target="_blank">
 		   							<span class="fa fa-instagram"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131" target="_blank">
 		  							<span class="fa fa-google"></span>
 		  						</a>
 		  					</li>
@@ -74,17 +74,24 @@
 	
 		<h1 class="imp_text cent_text pg_head">  <strong>Accepted Donations</strong> </h1>
 		<h4 class="cent_text">Check in daily to receive that latest updates on which grant applications the Cheng Grant Organization has accepted.</h4> 
-		<h4 class="cent_text">Responses and a leaderboard (with the names of the best applicants) with be updated regularly.</h4>
+		<h4 class="cent_text">(Click on the arrows to view / collapse responses)</h4>
 		<div class="panel panel-default col-lg-8 col-lg-offset-2 med_pad_bot">
 			<div class="panel-heading close_lead">
 				<h3 class="panel-title cent_text">Leaderboard<span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 			</div>
 			<div class="panel-body close_lead_this">
-				<p class="imp_text">Arranged based on best composite application score (/100) to worst composite score.</p>
+				<p class="imp_text">Top 10 scores arranged based on best composite application score (/100) to worst composite score.</p>
 				<ul class="imp_text no_bullets">
-					<li><strong>1)</strong> Jason Shaw</li>
-					<li><strong>2)</strong> Kevin Chen</li>
-					<li><strong>3)</strong> Gowtham Manikandan</li>
+					<li><strong>1)</strong> Rishi Das</li>
+					<li><strong>2)</strong> Jason Shaw</li>
+					<li><strong>3)</strong> Allison Li</li>
+					<li><strong>4)</strong> Nicole Segaran</li>
+					<li><strong>5)</strong> Jace Loncharich</li>
+					<li><strong>6)</strong> Hannah Glazier</li>
+					<li><strong>7)</strong> Aakash Roy</li>
+					<li><strong>8)</strong> Satvik Kumar</li>													
+					<li><strong>9)</strong> Amy Tian</li>
+					<li><strong>10)</strong> Gowtham Manikandan</li>										
 				</ul>
 			</div>
 		</div>
@@ -92,7 +99,7 @@
 			<div class="panel-heading close_resp">
 				<h3 class="panel-title cent_text">Accepted Donation Responses<span class="pull-right glyphicon glyphicon-menu-down"></span></h3>
 			</div>
-			<div class="panel-body close_resp_this">
+			<div class="panel-body close_resp_this collapse">
 				<p class="imp_text">Here are some of our highest scoring applications! We strongly recommend studying off of them.</p>
 				<!-- add carousel right here, and make sure jquery exists on this page -->
 				<div id="theCarousel" class="carousel slide" data-ride="carousel">
@@ -101,31 +108,39 @@
 				    <li data-target="#theCarousel" data-slide-to="0" class="active"> </li >
 				    <li data-target="#theCarousel" data-slide-to="1"> </li>
 				    <li data-target="#theCarousel" data-slide-to="2"></li>
+				    <li data-target="#theCarousel" data-slide-to="3"></li>				    
 				  </ol>
 				  <!-- Define the text to place over the image, ordered list w/ captions + buttons-->
 					<div class="carousel-inner">
 					    <div class="item active">
 					    <!-- <img src="images/Cheng_Building.JPG" alt="Building"> -->
 						    <div class ="slide1">
-						    	<img class="slide_image" src="images/empty.JPG" alt="empty">
-						    	<div class="carousel-caption">
-						    	</div>
+								<img class="slide_image" src="images/Aakash_Accepted.PNG" alt="Aakash">
+								<div class="carousel-caption">
+								</div>
 						  	</div>
 						</div>
 					  	<div class="item">
 						  	<div class="slide2">
-						  		<img class="slide_image" src="" alt="Dinner">
+						  		<img class="slide_image" src="images/Hannah_Accepted.JPG" alt="Hannah">
 						  		<div class="carousel-caption">
 						  		</div>
 					  		</div>
 						</div>
 						<div class="item">
 							<div class="slide3">
-								<img class="slide_image" src="" alt="Mountain">
+								<img class="slide_image" src="images/Jason_Accepted.png" alt="empty">
+						    	<div class="carousel-caption">
+						    	</div>
+							</div>
+						</div>
+						<div class="item">
+							<div class="slide4">
+								<img class="slide_image" src="images/Satvik_Accepted.JPG" alt="Satvik">
 								<div class="carousel-caption">
 								</div>
 							</div>
-					</div>
+						</div>						
 					  <!-- Set the actions to take when the arrows are clicked -->
 						  <a class="left carousel-control" href="#theCarousel" data-slide="prev">
 						  	<span class="glyphicon glyphicon-chevron-left"> </span>
@@ -137,9 +152,12 @@
 				</div>
 			</div>
 		</div>
+		<div class="bot_box med_pad_bot pad_top">
+			<p>&nbsp &nbsp &nbsp &nbsp &nbsp </p>
+		</div>		
 		<footer class="footer">
 			<div class="container">
-				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="index.html"> ChengFoundation.us </a></h5>
 			</div> 
 		</footer>		
 	</body>
@@ -147,16 +165,13 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script>
 		$(document).ready(function(){
-		function change_credits_init(){
-			$(".close_resp_this").fadeToggle(0);
-		}
 		function change_resp_credits(){
 			$(".close_resp_this").fadeToggle(200); 
 		} 
 		function change_lead_credits(){
 			$(".close_lead_this").fadeToggle(200);
 		}
-		change_credits_init() 
+		// change_credits_init() 
 		$('.close_resp').on("click",change_resp_credits)
 		$('.close_lead').on("click",change_lead_credits)
 	});
