--- a/donations.html
+++ b/donations.html
@@ -11,7 +11,7 @@
 			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
-	<body>
+	<body class="big_top">
 		<header>
 				<div class = "container">
 					<nav class="navbar navbar-default navbar-fixed-top">
@@ -45,22 +45,22 @@
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1" target="_blank">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng" target="_blank">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/" target="_blank">
 		   							<span class="fa fa-instagram"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131" target="_blank">
 		  							<span class="fa fa-google"></span>
 		  						</a>
 		  					</li>
@@ -71,66 +71,82 @@
 					</nav>
 				</div>
 			</header>
-		<div class="container whitesmoke col-lg-8 col-lg-offset-2">
-
+		<div class="container whitesmoke col-8 col-offset-2 pad_bot">
 			<h1 class="imp_text cent_text pg_head">  <strong>Donations</strong> </h1>
-			<p class="cent_text fine_print"> You must answer <strong>all</strong> of the questions below in order to be eligible for a Cheng Grant.</p>
-			<p class="cent_text fine_print"> In order to be eligible for the responses slideshow on the Accepted Donations page, you must take a screenshot of your entire donation application prior to clicking the submit button. Please send screenshots to thechengfoundation@gmail.com.</p>			
+			<p class="cent_text fine_print"> You must answer <strong>all</strong> of the questions below in order to be eligible for a Cheng Grant of $0.</p>
+			<p class="cent_text fine_print"> In order to be selected for the responses slideshow on the Accepted Donations page, you must take a screenshot of your entire donation application prior to clicking the submit button. Please send screenshots to <a>thechengfoundation@gmail.com.</a></p>			
 			<div class="container">
 				<div class="input-group sep_group">
 					  <span class="input-group-addon" id="basic-addon1">Full Name</span>
-					  <input type="text" class="form-control" placeholder="" aria-describedby="First Name">
+					  <input type="text" class="form-control one_w" placeholder="" aria-describedby="First Name">
 				</div>
 				<div class="input-group low_group">
 					<span class="input-group-addon" id="basic-addon2">Favorite Cheng Family Member</span>
-					<input type="text" class="form-control" placeholder="" aria-describedby="Favorite">
+					<input type="text" class="form-control one_w" placeholder="" aria-describedby="Favorite">
 					<span class="input-group-addon" id="basic-addon2">Cheng</span>
 				</div>
 				<div class="cent_text form-group low_group">
-					<textarea class="form-control" placeholder="In 150 words or less, defend you answer to the previous question" rows="5" id="comment"></textarea>
+					<textarea class="form-control one_w" placeholder="In 150 words or less, defend you answer to the previous question" rows="5" id="comment"></textarea>
 				</div>
 				<div class="input-group low_group">
-				  <span class="input-group-addon">Email Address</span>
-				  <input type="text" class="form-control" aria-label="Email">
+				  <span class="input-group-addon one_w">Email Address</span>
+				  <input type="text" class="form-control one_w" aria-label="Email">
 				  <span class="input-group-addon" id="basic-addon2">@chengfoundation.us</span>
 				</div>
 				<div class="input-group low_group">
 					<span class="input-group-addon">Date of Projected Death</span>
-					<input type="text" class="form-control" aria-label="DOD">
+					<input type="text" class="form-control one_w" aria-label="DOD">
 				</div>
 				<div class="input-group low_group">
 					<span class="input-group-addon">Horoscope</span>
-					<input type="text" class="form-control" aria-label="Horoscope">
+					<input type="text" class="form-control one_w" aria-label="Horoscope">
 				</div>
 				<div class="input-group low_group">
 					<span class="input-group-addon">Yearly Income (in $)</span>
-					<input type="text" class="form-control" aria-label="Yearly income">
+					<input type="text" class="form-control one_w" aria-label="Yearly income">
 				</div>
 				<div class="input-group low_group">
-					<span class="input-group-addon">Full Social Security Number</span>
-					<input type="text" class="form-control" aria-label="Yearly income">
+					<span class="input-group-addon">Favorite Number</span>
+					<input type="text" class="form-control one_w" aria-label="Yearly income">
 				</div>
 				<div class="input-group low_group">
-					<span class="input-group-addon">Bank Account Password</span>
-					<input type="text" class="form-control" aria-label="Yearly income">
+					<span class="input-group-addon">Bank Account Router</span>
+					<input type="text" class="form-control one_w" aria-label="Yearly income">
 				</div>
 				<div class="cent_text form-group low_group">
-					<textarea class="form-control" placeholder="In 250 words or less, explain why you are worthy of receiving a Cheng Grant." rows="10" id="comment"></textarea>
+					<textarea class="form-control grant" placeholder="In 250 words or less, explain why you are worthy of receiving a Cheng Grant." rows="10" id="comment"></textarea>
 				</div>
 				<div class="cent_text form-group low_group">
-					<textarea class="form-control" placeholder="Which Cheng do you worship: Bryce or Darrell? Why?" rows="5" id="comment"></textarea>
+					<textarea class="form-control worship" placeholder="Which Cheng do you worship: Bryce or Darrell? Why?" rows="5" id="comment"></textarea>
 				</div>
-				<div class = "cent_text buf_top">
-					<p><a class="btn btn-success btn-lg" href="index.html" role="button">Submit</a></p>
+				<div class = "cent_text buf_top pad_bot">
+					<p><a class="btn btn-success btn-lg sub" role="button">Submit</a></p>
+					<div class="alert alert-success thanker" role="alert">Thanks for submitting an application, we will notify you of your application's status within 7 business days!</div>
 				</div>
 			</div>
 		</div>
 		<footer class="footer">
 			<div class="container">
-				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="index.html"> ChengFoundation.us </a></h5>
 			</div> 
 		</footer>		
 	</body>
 	<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script>
+	$(document).ready(function(){
+		function change_credits_init(){
+			$(".thanker").fadeToggle(0); 
+		}
+		function change_thank(){
+			$(".thanker").fadeIn(200);
+			$(".worship").val("");
+			$(".grant").val("");
+			$(".one_w").val("");
+		} 
+		change_credits_init() 
+		$('.sub').on("click",change_thank) 
+	});
+	</script>
+
 </html>
