--- a/properties.html
+++ b/properties.html
@@ -11,7 +11,7 @@
 			<link href="https://fonts.googleapis.com/css?family=Pinyon+Script" rel="stylesheet">
 			<script src="https://use.fontawesome.com/ebaf6b7b9f.js"></script>
 	</head>
-	<body>
+	<body class="small_top">
 		<header>
 				<div class = "container">
 					<nav class="navbar navbar-default navbar-fixed-top">
@@ -45,22 +45,22 @@
 					      <!-- Right aligned links -->
 					      <ul class="nav navbar-nav navbar-right">
 						    <li>
-					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1">
+					        	<a class="btn btn-social-icon btn-facebook btn-lg" href="https://www.facebook.com/bryce.cheng.1" target="_blank">
 		   							<span class="fa fa-facebook"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng">
+					        	<a class="btn btn-social-icon btn-twitter btn-lg" href="https://twitter.com/bryce_cheng" target="_blank">
 		   							<span class="fa fa-twitter"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/">
+					        	<a class="btn btn-social-icon btn-instagram btn-lg" href="https://www.instagram.com/b_ryce_cheng/" target="_blank">
 		   							<span class="fa fa-instagram"></span>
 		  						</a>
 		  					</li>
 		  					<li>
-					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131">
+					        	<a class="btn btn-social-icon btn-google btn-lg" href="https://plus.google.com/111061049653291785131" target="_blank">
 		  							<span class="fa fa-google"></span>
 		  						</a>
 		  					</li>
@@ -83,55 +83,51 @@
 		    <li data-target="#theCarousel" data-slide-to="4"></li>
 		  </ol>
 		  <!-- Define the text to place over the image, ordered list w/ captions + buttons-->
-
-		  <!-- FOR ALL THE PROPERTIES, THESE NEED TO BE IN A DIFFERENT SLIDE FORMAT THAN HOME PAGE, CAN JUST HAVE TWO SLIDE CLASSES ONE FOR HOME PAGE AND ONE FOR HERE -->
 			<div class="carousel-inner">
 			    <div class="item active">
-			    <!-- <img src="images/Cheng_Building.JPG" alt="Building"> -->
 				    <div class ="slide1">
-				    	<img class="slide_image" src="images/congress.JPG" alt="Building1">
-				    	<div class="carousel-caption">
+				    	<img class="slide_image" src="images/congress.JPG" alt="The Capitol Building">
+				    	<div class="carousel-caption collapse">
 				      		<h3 class="cent_text med_print">The Capitol Building</h3>
-				      		
-				      		<p>The Cheng Family owns a number of government properties in and around Washington D.C. Most prominent is their recent purchase of the Capitol Building, the seat of the United States Congress. In addition to owning governmental landmarks, the Cheng Foundation also exerts an unprecedented influence on US politics, with over 500 Congressmen being active members of the Cheng Foundation. </p>
+				      		<p>The Cheng Family owns a number of government properties in and around Washington D.C. Most prominent is their recent purchase of the Capitol Building, the seat of the United States Congress. In addition to owning governmental landmarks such as the Capitol Building, the Cheng Foundation also exerts an unprecedented influence on US politics, with over 500 Congressmen being active members of the Foundation. </p>
 				    	</div>
 				  	</div>
 				</div>
 			  	<div class="item">
 				  	<div class="slide2">
-				  		<img class="slide_image" src="images/prop2.jpg" alt="Building2">
+				  		<img class="slide_image" src="images/prop2.jpg" alt="Cheng Family Resorts">
 				  		<div class="carousel-caption">
 				      		<h3 class="cent_text med_print">Cheng Family Resorts</h3>
-				      		<p>A mystic resort located just outside Hong Kong that has been passed down for generations within the Cheng dynasty. Following the death of Bryce and Darrell's uncle, Deng Xiaoping, the Foundation inherited ownership of the resort. Visitors must pay $5 million in order to enter the compound. Certain Cheng family clients such as Xi Jinping are offered a discounted rate of $4,999,999.99.</p>
+				      		<p>A mystic resort located just outside Hong Kong that has been passed down for generations within the Cheng Dynasty. Following the death of Bryce and Darrell's uncle, Deng Xiaoping, the Foundation inherited ownership of the resort. Visitors must pay $5 million in order to enter the compound. Certain Cheng family clients such as Xi Jinping are offered a heavily discounted rate of $4,999,999.99.</p>
 				  		</div>
 			  		</div>
 				</div>
 				<div class="item">
 					<div class="slide3">
-						<img class="slide_image" src="images/palace.png" alt="Building3">
+						<img class="slide_image" src="images/palace.png" alt="Temple of the Twin Dragons">
 						<div class="carousel-caption">
 				      		<h3 class="cent_text med_print">The Temple of the Twin Dragons</h3>
 				      		<p>
-				      			The Temple of the Twin Dragons is where Bryce and Darrell spend the majority of their time. Once a temple, the estates have now been renovated into a lavish palace employing 2000 servants and featuring 17 indoor Jacuzzis and 53 tennis courts with nets hand-crafted out of silver. The palace is most famous for its system of gold-plated toilets which have been emulated by billionaires worldwide.   
+				      			The Temple of the Twin Dragons is where Bryce and Darrell spend the majority of their time. Once a temple, the estates have now been renovated into a lavish palace employing 2000 servants and featuring 17 indoor Jacuzzis and 53 tennis courts with nets hand-crafted out of platinum. The palace is most famous for its system of gold-plated toilets which have been emulated by billionaires worldwide.   
 				      		</p>
 						</div>
 					</div>
 				</div>
 				<div class="item">
 					<div class="slide4">
-						<img class="slide_image" src="images/prop1.jpg" alt="Building4">
+						<img class="slide_image" src="images/prop1.jpg" alt="The Biltmore Estates">
 						<div class="carousel-caption">
 				      		<h3 class="cent_text med_print">The Biltmore Estate</h3>
-				      		<p>The recent purchase of the Biltmore Estate by the Cheng Foundation represents its commitment to preserving American historical treasures. After running the Vanderbilt family bankrupt, the Cheng family generously bought out their estate making it accessible to tourists for the first time in decades.</p>
+				      		<p>The recent purchase of the Biltmore Estate by the Cheng Foundation represents its commitment to preserving American historical treasures. After running the Vanderbilt family bankrupt through cut-throat capitalistic tactics, the Cheng family generously bought out their estate (in addition to their university) making it accessible to tourists for the first time in decades.</p>
 						</div>
 					</div>
 				</div>
 				<div class="item">
 					<div class="slide5">
-						<img class="slide_image" src="images/prop5.jpg" alt="Building5">
+						<img class="slide_image" src="images/prop5.jpg" alt="Tower of the Twin Dragons">
 						<div class="carousel-caption">
 				      		<h3 class="cent_text med_print">The Tower of the Twin Dragons</h3>
-				      		<p>The Tower of the Twin Dragons was an architectural miracle created through Foundation efforts. Beautifully carved into the natural landscape of rural Oregon, it represents the Cheng Foundation's committment to both technological progress and nature. It has since been made a protected National Landmark. </p>
+				      		<p>The Tower of the Twin Dragons is an architectural miracle created through Foundation efforts. Beautifully carved into the natural landscape of rural Oregon, it represents the Cheng Foundation's committment to both technological progress and the preservation of natural enviornments. It has since been made both a protected State and National Landmark. </p>
 						</div>
 					</div>
 				</div>
@@ -145,9 +141,10 @@
 			</div>
 		</div>
 		<div class="new-caption-area"></div>
+		<div class="has_height"></div>
 		<footer class="footer">
 			<div class="container">
-				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="https://www.chengfoundation.us"> ChengFoundation.us </a></h5>
+				<h5 class="cent_text no_pad">Created by Pranav Sriram | The Cheng Foundation Copyright 2017: <a href="index.html"> ChengFoundation.us </a></h5>
 			</div> 
 		</footer>
 	</body>
